Containers height and overflow fixes.

--- a/src/styles/Contacts.module.scss
+++ b/src/styles/Contacts.module.scss
@@ -3,13 +3,14 @@
 .contacts {
 	flex: 1;
 	padding: 8px;
-	margin-top: 12px;
+	margin: 8px 0;
 	max-width: 360px;
 	display: flex;
 	flex-direction: column;
-	height: fit-content;
 	position: sticky;
-	top: calc(variables.$navbar-height + 12px);
+	top: calc(variables.$navbar-height + 8px);
+	height: calc(100vh - (variables.$navbar-height + 16px));
+	overflow-y: auto;
 
 	hr {
 		width: 100%;
