--- a/src/styles/Timeline.module.scss
+++ b/src/styles/Timeline.module.scss
@@ -2,8 +2,7 @@
 
 .timeline {
 	flex: 2.5;
-	margin: 0 24px;
-	margin-top: 8px;
+	margin: 8px 24px;
 	padding: 12px;
 	display: flex;
 	flex-direction: column;
